<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageUpload"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.InsertEditBedSpaceDealActivity">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_owner_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Name"
            android:backgroundTint="@color/toolbar_color"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <EditText
            android:id="@+id/editText_roomNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="Room Number"
            android:backgroundTint="@color/toolbar_color"
            android:inputType="textCapCharacters"
            app:layout_constraintEnd_toEndOf="@+id/editText_owner_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_owner_name"
            app:layout_constraintTop_toBottomOf="@+id/editText_owner_name" />

        <TextView
            android:id="@+id/select_hall_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hall_selection_warning"
            android:textColor="#F44336"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/editText_roomNo"
            app:layout_constraintTop_toBottomOf="@+id/editText_roomNo" />

        <Spinner
            android:id="@+id/spinner_hall"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginTop="8dp"
            android:contentDescription="select Hall"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editText_roomNo"
            app:layout_constraintStart_toStartOf="@+id/editText_roomNo"
            app:layout_constraintTop_toBottomOf="@+id/editText_roomNo"
            app:layout_constraintVertical_bias="0.035" />

        <Button
            android:id="@+id/btn_upload_offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload Offer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <EditText
            android:id="@+id/editText_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Phone Number "
            android:backgroundTint="@color/toolbar_color"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/spinner_hall"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/spinner_hall"
            app:layout_constraintTop_toBottomOf="@+id/spinner_hall" />

        <EditText
            android:id="@+id/editText_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Price (naira)"
            android:backgroundTint="@color/toolbar_color"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/editText_phone_number"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/editText_phone_number" />

        <Button
            android:id="@+id/btn_select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_price" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_select_image"
            app:srcCompat="@color/blue1"
            tools:srcCompat="@color/blue1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>