<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bedspaces"
            android:icon="@drawable/ic_bed_menu"
            android:title="Bedspaces"
            android:iconTint="@color/colorPrimary"/>
        <item
            android:id="@+id/nav_halls"
            android:icon="@drawable/ic_hall_menu"
            android:title="Halls"
            android:iconTint="@color/colorPrimary"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
